--- a/src/css/scss/common/_productSection.scss
+++ b/src/css/scss/common/_productSection.scss
@@ -5,18 +5,17 @@
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
   max-width: 100%;
-  justify-content: center;
-  align-items: center;
 
-  // @include screen-720 {
-  //   grid-template-columns: 1fr;
-  //   grid-template-rows: 1fr 1fr;
-  // }
+  @include screen-720 {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
   
-  // @include screen-960 {
-  //   grid-template-columns: 1fr 1fr;
-  //   padding: 0;
-  // }
+  @include screen-960 {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    padding: 0;
+  }
 
   .text-box {
     background: $color-shadow-2;
